2008-05-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Enable HTTP keep-alive by default.
	* src/HelpItemFactory.cc
	* src/option_processing.cc
	* src/usage_text.h

2008-05-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Disable http keep-alive if the remote server is not HTTP/1.1.
	* src/HttpConnection.cc

2008-05-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Receive content body of 302 response so that the connection can be
	reused later when http keep-alive is enabled.
	* src/HttpNullDownloadCommand.cc
	* src/HttpNullDownloadCommand.h
	* src/HttpResponseCommand.cc
	* src/HttpResponseCommand.h

2008-05-07  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	const SharedHandle<Request> -> const SharedHandle<Request>&
	* src/FtpDowndloadCommand.cc
	* src/FtpDowndloadCommand.h
	* src/HttpDownloadCommand.cc
	* src/HttpDownloadCommand.h

2008-05-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that the control file(.aria2 file) is not renamed
	according to tryAutoFileRenaming().
	tryAutoFileRenaming() was rewritten so that if both renamed file and
	its control file exist, use them and continue download.
	The old implementation didn't take into account of control file's
	existence, so basically you couldn't continue download of renamed file.
	* src/BtProgressInfoFile.h
	* src/DefaultBtProgressInfoFile.cc
	* src/DefaultBtProgressInfoFile.h
	* src/NullProgressInfoFile.h
	* src/RequestGroup.cc
	* test/DefaultBtProgressInfoFileTest.cc
	* test/MockBtProgressInfoFile.h
	
2008-05-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Change the default value of --metalink-servers option from `5' to `1'.
	* src/HelpItemFactory.cc
	* src/option_processing.cc
	* src/usage_text.h
	
2008-05-05  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Reimplemented transparent metalink using Accept request header.
	* src/HttpRequest.cc
	* src/HttpRequest.h
	* src/HttpRequestCommand.cc
	* src/Metalink2RequestGroup.cc